--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -14,27 +14,27 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:layout_marginTop="40dp"
+            android:textSize="30sp"
             android:text="Disponibile"/>
         <TextView
             android:id="@+id/dash_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:text="0"/>
 
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="horizontal">
                 <com.github.mikephil.charting.charts.PieChart
                     android:layout_width="350dp"
                     android:layout_height="350dp"
-                    android:layout_marginStart="31dp"
                     android:layout_marginBottom="30dp"
                     android:id="@+id/pieChartView">
             </com.github.mikephil.charting.charts.PieChart>
