--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            app:fabAlignmentMode="end"
             app:fabCradleMargin="20dp"
             app:fabCradleRoundedCornerRadius="28dp"
             app:fabCradleVerticalOffset="16dp">
