--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -7,30 +7,39 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/item_amount"
+        android:id="@+id/item_currency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:text="0"
+        android:layout_above="@+id/item_tag"
+        android:layout_alignParentTop="true"
+        android:text="€"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/item_title"
+        android:id="@+id/item_amount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toStartOf="@+id/item_type"
+        android:layout_toEndOf="@+id/item_currency"
+        android:text="0"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:id="@+id/item_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:layout_toStartOf="@+id/item_amount"
-        android:layout_alignParentStart="true"
-        android:text="Title"
+        android:layout_alignParentEnd="true"
+        android:text="+"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/item_tag"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/item_title"
+        android:layout_below="@+id/item_amount"
         android:text="Tag"
         android:textSize="20sp" />
 
