--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="55dp" />
     </LinearLayout >
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -48,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add"
+            android:contentDescription="add"
             app:layout_anchor="@id/bottomBar"  />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
