--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -23,17 +23,30 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-                <androidx.appcompat.widget.AppCompatEditText
+            <EditText
+                android:id="@+id/inputDescription"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:paddingVertical="14dp"
+                android:background="#4D787878"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                android:textAlignment="center"
+                android:textColorHint="#7A8089"
+                android:hint="Description" />
+
+            <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/inputAmount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
-                    android:paddingVertical="16dp"
+                    android:paddingVertical="14dp"
                     android:inputType="numberDecimal"
                     android:hint="0"
                     android:background="#4D787878"
                     android:textColor="@color/white"
-                    android:textSize="30sp"
+                    android:textSize="24sp"
                     android:textAlignment="center"
                     android:textColorHint="#7A8089">
                 </androidx.appcompat.widget.AppCompatEditText>
@@ -100,18 +113,24 @@
             android:padding="14dp">
             <Button
                 android:id="@+id/btnSub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="60dp"
                 android:layout_marginEnd="10dp"
+                android:background="#4D787878"
+                android:textColor="@color/white"
                 android:text="-"
+                android:textStyle="bold"
                 android:textSize="30sp"/>
             <Button
                 android:id="@+id/btnAdd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginHorizontal="10dp"
+                android:background="#4D787878"
+                android:textColor="@color/white"
                 android:text="+"
+                android:textStyle="bold"
                 android:textSize="30sp"/>
         </LinearLayout>
         </LinearLayout>
@@ -124,6 +143,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/white"
-        android:text="Return to dashboard"
+        android:text="GO BACK"
         android:textSize="14sp"/>
 </LinearLayout>
