--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -36,10 +36,25 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/item_tag"
+        android:id="@+id/item_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/item_amount"
+        android:layout_below="@+id/item_currency"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="7dp"
+        android:text="Description"
+        android:maxLength="25"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/item_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/item_type"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="2dp"
         android:text="Tag"
         android:textSize="20sp" />
 
