--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -35,6 +35,7 @@
                 <com.github.mikephil.charting.charts.PieChart
                     android:layout_width="350dp"
                     android:layout_height="350dp"
+                    android:layout_marginEnd="30dp"
                     android:id="@+id/pieChartView">
             </com.github.mikephil.charting.charts.PieChart>
                 <com.github.mikephil.charting.charts.PieChart
