--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -38,7 +38,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Amount">
+                android:hint="Amount*">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -106,29 +106,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:padding="14dp">
+            android:gravity="center_horizontal">
             <Button
                 android:id="@+id/btnSub"
                 android:layout_width="120dp"
-                android:layout_height="60dp"
+                android:layout_height="65dp"
                 android:backgroundTint="#4D787878"
-                android:layout_marginEnd="5dp"
+                android:layout_margin="10dp"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:text="-"
+                android:textSize="26sp"
                 android:textStyle="bold"
-                android:textSize="30sp"
+                android:textScaleX="1.8"
                 android:textAlignment="center"/>
             <Button
                 android:id="@+id/btnAdd"
                 android:layout_width="120dp"
-                android:layout_height="60dp"
+                android:layout_height="65dp"
                 android:backgroundTint="#4D787878"
-                android:layout_marginStart="5dp"
+                android:layout_margin="10dp"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:text="+"
-                android:textStyle="bold"
-                android:textSize="30sp"
+                android:textSize="26sp"
+                android:textScaleX="1.25"
                 android:textAlignment="center"/>
         </LinearLayout>
         </LinearLayout>
