--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.Dashboard">
-
-    <LinearLayout
+<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical|center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:context=".fragments.Dashboard"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        >
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:textSize="30sp"
-            android:text="Available:"/>
+            android:id="@+id/privacy_toggle"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="Available:"/>
+            <Button
+                android:id="@+id/privacy_toggle_hide"
+                android:layout_marginTop="2sp"
+                android:layout_marginLeft="25sp"
+                android:layout_width="30sp"
+                android:layout_height="20sp"
+                android:visibility="gone"
+                android:background="@drawable/ic_privacy_hide"/>
+            <Button
+                android:id="@+id/privacy_toggle_show"
+                android:layout_marginTop="2sp"
+                android:layout_marginLeft="25sp"
+                android:layout_width="30sp"
+                android:layout_height="20sp"
+                android:visibility="gone"
+                android:background="@drawable/ic_privacy_show"/>
+        </LinearLayout>
+
         <TextView
             android:id="@+id/dash_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:textSize="30sp"
             android:text="0"/>
 
@@ -47,5 +69,3 @@
         </HorizontalScrollView>
 
     </LinearLayout>
-
-</FrameLayout>
