--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -34,6 +34,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/inputAmount"
                     android:inputType="number"
+                    android:maxLength="9"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
