--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -5,22 +5,25 @@
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="2dp"
+    android:paddingBottom="10dp"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/item_type"
+        android:id="@+id/item_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="+"
+        android:text="Today"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="20sp" />
+        android:textColor="@color/gray"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/item_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:textSize="20sp"
         android:text="0"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -29,16 +32,16 @@
         android:id="@+id/item_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/item_type"
+        android:layout_below="@+id/item_timestamp"
         android:layout_alignParentStart="true"
         android:layout_marginTop="7dp"
         android:text="Tag"
-        android:textSize="18sp" />
+        android:textSize="17sp" />
 
     <Button
         android:id="@+id/item_delete"
-        android:layout_width="35dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="35dp"
         android:layout_alignParentEnd="true"
         android:background="@drawable/ic_delete" />
 
